<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Application Toolkit</string>
    <string name="activity_title">Application Toolkit</string>
    <string name="app_icon_label">Application Toolkit</string>
    
    <!-- location -->
    <string name="locationSectionHeading">Location Services</string>
    <string name="launchGetCurrentLocationActivityButtonText">Get Current Location</string>
    <string name="providerLabel">Provider:</string>
    <string name="accuracyLabel">Accuracy:</string>
    <string name="timeToFixLabel">Time to Fix:</string>
    <string name="secondsUnit">second(s)</string>
    <string name="metersUnit">meters(s)</string>
    <string name="enabledProvidersLabel">Enabled Providers:</string>
    <string name="changeLocationProviderSettingsText">Change Location Provider Settings</string>
    <string name="launchTrackLocationActivityButtonText">Track Location</string>
    <string name="launchProximityAlertActivityButtonText">Add Proximity Alert</string>    
	<string name="startTrackingButtonText">Start Tracking</string>
    <string name="stopTrackingButtonText">Stop Tracking</string>
	<string name="setProximityAlert">Set Proximity\nAlert</string>
    <string name="clearProximityAlert">Clear Proximity\nAlert</string>
    <string name="selectProximityAlertTypeLabel">Select Proximity Alert Type</string>
    <string name="androidProximityAlertTypeLabel">Android</string>
    <string name="customProximityAlertTypeLabel">Custom</string>
    <string name="locationLabel">Location:</string>
    <string name="latitudeLabel">Latitude:</string>
    <string name="longitudeLabel">Longitude:</string>
    <string name="none">None</string>
    <string name="setLocation">Set Location</string>
    <string name="enterLocationLabel">Enter Location:</string>
    <string name="lookupLocationButton">Lookup Location</string>
    <string name="radiusLabel">Enter Radius (m):</string>
    <string name="geocodeErrorTitle">Geocoding Error</string>
    <string name="geocodeErrorMessage">Geocoding of location failed. Try re-submitting location.</string>
    
    <string name="launchGetWidgetInformation">Android Widget Information</string>
    <string name="AndroidTools">Explore Android Elements</string>
    <string name="MainDescription">Welcome to the Android Application Toolkit. 
        
        Click on the buttons below to start learning about the various sensors and tools that can be used within an Android application.</string>
    
    <!-- Sensors -->
    <string name="gravitySensorLabel">Gravity Sensor</string>
    <string name="accelerometerMagnetometerLabel">Accelerometer &amp; Magnetometer</string>
    <string name="gravityMagnetometerLabel">Gravity Sensor &amp; Magnetometer</string>
    <string name="rotationVectorLabel">Rotation Vector</string>
    <string name="selectedSensorLabel">Selected Sensor:</string>
    <string name="faceUpText">Face Up</string>
    <string name="faceDownText">Face Down</string>
    <string name="orientationLabel">Orientation:</string>
    <string name="azimuthLabel">Azimuth (Z Axis):</string>
    <string name="pitchLabel">Pitch (X Axis):</string>
    <string name="rollLabel">Roll (Y Axis):</string>
    <string name="xAxisLabel">X Axis:</string>
    <string name="yAxisLabel">Y Axis:</string>
    <string name="zAxisLabel">Z Axis:</string>
    <string name="proximityLabel">Proximity (cm):</string>
    <string name="speakOrientationLabel">Speak Orientation</string>
    <string name="speakMovementDetectedLabel">Speak Movement Detected</string>
    <string name="ttsNotificationsOn">TTS Notifications On</string>
    <string name="ttsNotificationsOff">TTS Notifications Off</string>
    <string name="rotationMatrixGenFailureMessage">Failed to generate rotation matrix</string>
    <string name="accelerometerLabel">Accelerometer</string>
    <string name="linearAccelerationSensorLabel">Linear Acceleration Sensor</string>
    <string name="startReadingAccelerationData">Start Reading Acceleration Data</string>
    <string name="readingAccelerationData">Reading Acceleration Data</string>
    <string name="enableHighPassFilterLabel">Enable High-Pass Filter</string>
    <string name="selectSensorSectionHeading">Select Sensor</string>
    <string name="optionsSectionHeading">Options</string>
    <string name="movementDetectedText">Movement Detected</string>
    <string name="gpsAltitudeLabel">GPS Altitude</string>
    <string name="barometerAltitudeLabel">Barometer Altitude (Standard Pressure)</string>
    <string name="mslpBarometerAltitudeLabel">Barometer Altitude (MSLP)</string>
    <string name="altitudeLabel">Altitude (m):</string>
    <string name="relativeAltitudeLabel">Relative Altitude (m):</string>
    <string name="mslpLabel">MSLP (milibar):</string>
    <string name="standardPressureLabel">Standard Pressure (milibar):</string>
    <string name="webServiceConnectionFailureMessage">Could not read pressure from web service</string>
    <string name="gpsNotEnabledMessage">Warning: GPS is not enabled</string>
    <string name="notAvailable">N/A</string>

    <!-- Sensors -->
    <string name="launchSensorList">Sensor List</string>
    <string name="launchDetermineOrientation">Determine Orientation</string>
    <string name="launchDetermineMovement">Determine Movement</string>
        
    <string name="btn_speak_label">Speak</string>
    <string name="btn_speak_label_fordisplay">Displaying results</string>
    <string name="btn_tts_stop_speak_label">Stop speaking</string>
    <string name="btn_speech_write_activation_tag">Write speech activation tag</string>
    
    <string name="speech_activation_speak">Speak Activation Speak</string>
    <string name="speech_activation_clap">Speak Activation clap</string>
    <string name="speech_activation_camera">Speak Activation camera</string>
    <string name="speech_activation_movement">Speak Activation movement</string>
                
    <string name="speech_prompt">Speak</string>
    <string name="speechTargetHeading">What you are trying to say</string>
    <string name="speechTargetPresetHeading">Select preset</string>
    <string name="speechActivationHeading">Select speech activation method</string>
    <string name="speechResultsHeading">Results: </string>
    <string name="speechNotAvailableMessage">Speech recognition not supported on this device</string>
    <string name="SpeechRecognitionResultsActivityLabel">Speech Recognition Results</string>
    <string name="speechRecognitionFailed">Did not understand, please try again</string>
    <string name="speechMultiFoodResultHeading">Recognition Results</string>
    <string name="speech_data_check_result_title">Language Details Results</string>
    
    <string name="speechActiviationHeading">Activation Method</string>
    <string name="speechActiviationControlHeading">Activation Control</string>
    
    <string name="speechFoodBrowserName">Food Database Browser</string>
    
    <string name="speech_magic_word_prompt">Say the magic word</string>
    <string name="speech_magic_word_secret">tree</string>
    <string name="speech_magic_word_correct_prompt">Correct! You said the magic word: </string>
    <string name="speech_magic_word_fail_prompt">Wrong! The magic word is not: </string>
    <string name="speech_magic_word_heard_nothing">Heard nothing</string>
    <string name="menu_hint">Hint</string>
    
    <string name="btn_food_lookup_label">Lookup</string>
    <string name="btn_food_edit_label">Edit</string>
    <string name="btn_food_edit_and_compare_label">Edit and Compare</string>
    <string name="btn_food_quiz_label">Quiz</string>
    <string name="speechFoodResultHeading">Transcript</string>
    
    <string name="btn_stop_speak_label">Stop Listening</string>
    
	<string name="menu_speechparam">Speech Parameters</string>
    <string name="menu_reset_speechparam">Reset All</string>
    <string name="menu_filterparam">Filter Parameters</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_resetprefs">Reset to defaults</string>
    <string name="menu_setlanguage">Set Language</string>
    <string name="menu_speech_language_details">Language Details</string>
    <string name="menu_setaudiostream">Set Audio Stream</string>
    <string name="menu_languageavailable">Test Locale</string>
    <string name="menu_speech_compute_index">Compute Index</string>
    <string name="menu_showdb_param">Show Foods</string>
    <string name="menu_resetdb_param">Reset Database</string>
    <string name="menu_write_speech_activation_tag">Write Speech Activation Tag</string>

    <string name="labelWriteTag">Write Activation Tag</string>
    
    <string name="menu_param">Matching Preferences</string>
        
    <string name="speech_activation_btn_prefix">Start </string>
    <string name="speech_activation_btn_listening">Listening for </string>

    <string name="speech_launcher_prompt">Say a test phrase.</string>
    
    <string name="btn_speech_start_service">Start</string>
    <string name="btn_speech_stop_service">Stop</string>
    
    <string name="WidgetPageDescription">Below are some examples of Android Form Widgets.
        
        Click on the link below to learn more about Android Widgets for mobile applications.</string>
    <string name="launchAndroidWidget">Android Widgets</string>
    
    <string name="WidgetsDescription">Widgets can be used to greatly enhance the UI of your Android applications. 
        
        Click on the link below to learn about more about Android Widgets </string>
    
    
    <!-- select type -->    
    
    <string name="btn_start_motion_activate">Start Movement Activator</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
   

    <string name="sensorSectionHeading">Physical Sensors</string>
    
    <string name="TutorialButton">Android Tutorials</string>
	<string name="TutorialDescription">There are several tutorials to help you get started with Android programming - click the link below to learn more!!!</string>
    
	<string name="SourceCode">Source Code</string>
	<string name="no_device">No Device</string>
</resources>
