<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
           
            <ImageView
            android:layout_gravity="center"
            android:layout_width="270dp"
    		android:layout_height="150dp"
		    android:adjustViewBounds="true"
		    android:src="@drawable/android_teacher_cmusv"
		    android:scaleType="fitXY" />
            
			<TextView
			    android:textSize="15dp"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/MainDescription" />

			
            <TextView style="@style/line_separator" />
            <TextView style="@style/line_separator" />
             

            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchSensorListClick"
                android:text="@string/launchSensorList" />
            
            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchDetermineOrientationClick"
                android:text="@string/launchDetermineOrientation" />
            
            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchDetermineMovementClick"
                android:text="@string/launchDetermineMovement" />
            
            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchGetCurrentLocationActivityClick"
                android:text="@string/launchGetCurrentLocationActivityButtonText" />
            

            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchAndroidWidgetClick"
                android:text="@string/launchAndroidWidget" />
            
            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchAndroidTutorialClick"
                android:text="@string/TutorialButton" />
            
            <Button
                style="@style/appbuttoninlist"
                android:onClick="onLaunchAndroidSourceCode"
                android:text="@string/SourceCode" />
            
            </LinearLayout>
    </ScrollView>

</LinearLayout>